deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp-pod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp-pod
  template:
    metadata:
      labels:
        app: myapp-pod
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.14.2
        ports:
          - containerPort: 80
      - name: multitool-container
        image: wbitt/network-multitool
        ports: 
          - containerPort: 8080
            name: http-port
