task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp-pod
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: myapp-pod
    spec:
      containers:
      - name: nginx-container
        image: nginx:1.28
        ports:
          - containerPort: 80
      - name: multitool-container
        image: wbitt/network-multitool
        ports: 
          - containerPort: 8080
            name: http-port
