service_node_port.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  selector:
    app: myapp-pod
  ports:
    - name: nginx-container
      protocol: TCP
      port: 9001
      targetPort: 80
      nodePort: 30001
